--- a/style.css
+++ b/style.css
@@ -22,16 +22,45 @@
      background-color: grey;
      font: 24px
  }
+ .icon {
+    font-size: 15px;
+    margin: 9px;
+    color: grey;
+}
  
  .menu {
      color: white;
      width: auto;
      font-weight: 100;
  }
+
+ 
+.blue-book {
+    background-color: #d1d1d1;
+    text-align: center;
+}
+
+.container-d {
+    background-color: #212121;
+}
+
+.footer-links {
+    color: #bfbfbf;
+    text-decoration: none;
+    font-size: 12px;
+    margin-left: 20px;
+}
+
+.white-gradient {
+    background-color: rgb(255, 186, 0);
+    border-radius: inherit;
+    padding: 5px 23px;
+    font-size: 12px;
+}
  /* .fz{
     font-size:12px;
 } */
- 
+/*  
  .text-white {
      line-height: .1;
  }
@@ -67,7 +96,7 @@
 .dark-grey {
 	background-color: #212121;
 	color: #bfbfbf;
-}
+} */
 
 
 .footer{
