--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ img{
     color: #bfbfbf;
     text-decoration:none;
     font-size: 14px;
-    margin-left: 40px;
+    /* margin-left: 25px; */
 }
 a{
 text-decoration: none;
